# testServer

./: Cargo.toml
src/: lib.rs  logging.rs  main.rs
src/game/: mod.rs
src/net/: connection.rs  error.rs  mod.rs  server.rs  status.rs
src/net/login/: disconnect.rs  mod.rs  start.rs  success.rs
src/net/login/encryption/: key.rs  mod.rs  request.rs  response.rs
src/net/protocol/: codec.rs  handshake.rs  login.rs  mod.rs
src/test/: mod.rs
src/utils/: config.rs  mod.rs  varint.rs
src/varint/: metrics.rs  mod.rs  optimized.rs
