[package]
name = "testServer"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.12"
tokio = { version = "1", features = ["full"] }
bytes = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1.16.0", features = ["v4"] }
parking_lot = "0.12.3"
lazy_static = "1.5.0"
toml = "0.8.22"
num_cpus = "1.17.0"
log = "0.4.27"
prometheus = { version = "0.13", features = ["process"] }
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "1.0"
reqwest = { version = "0.11", features = ["json"] }
env_logger = "0.11.8"
chrono = "0.4"
rsa = "0.10.0-rc.1"
pkcs8 = "0.11.0-rc.4"
rand_core = "0.9.3"
rand = "0.9.1"
